--- a/login/assets/css/reset.css
+++ b/login/assets/css/reset.css
@@ -1,1 +1,9 @@
-/* CSS placeholder */
+/* Global font */
+html, body {
+  font-family: sans-serif;
+}
+
+/* Make basically all text sans-serif (covers most elements) */
+* {
+  font-family: sans-serif;
+}
